* CHANGES IN dplR VERSION 1.6.3

File: CITATION
--------------

- Removed a piece of obsolete code which raised a NOTE in recent R-devel
  when checking --as-cran.

File: DESCRIPTION
-----------------

- A new field, MailingList, shows the address of the web interface
  to the dplR-help mailing list hosted on Google Groups.
- New Imported package: R.utils.
- New Suggested package: testthat. Unit tests are now done with testthat
  instead of RUnit.
- RUnit is no longer Suggested.
- Updated version requirement: gmp (>= 0.5-5).  Earlier versions of gmp do
  not export is.bigq() which is required by dplR.  The previous version
  requirement (>= 0.5-2) was a mistake.
- Updated version requirement: R (>= 2.15.2).  For some reason, R
  CMD check does not play nice with testthat on earlier versions of R.

File: NAMESPACE
---------------

- Importing captureOutput() from R.utils.
- Importing package Matrix.
- Exporting net().

Various .R files
----------------

- Using deparse.level=0 in some calls to cbind() and rbind() when names
  are not needed in the result.  Due to this change, the first column of
  the $bins matrix in the return value of ccf.series.rwl(),
  corr.rwl.seg(), and corr.series.seg() does not have (undocumented)
  column names anymore.

File: ffcsaps.R
---------------

- Increased performance by using sparse matrices from the Matrix
  package.

File: latexify.R
----------------

- Improved efficiency when handling a large number of strings with
  the "bytes" Encoding.  The code now uses R.utils::captureOutput()
  instead of a home-baked re-implementation of (parts of)
  utils::capture.output(), which is also a more compact solution in
  terms of lines of code in dplR.  See Henrik Bengtsson's notes at
  http://www.jottr.org/2014/05/captureOutput.html (referenced on
  2015-01-07).

File: net.R
-----------

- New function for computing the NET parameter (Esper et al., 2001).

* CHANGES IN dplR VERSION 1.6.2
